--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,10 @@ main {
     background-color: #fff ;
      border: 1px gray solid;
 }
+
+.btn:hover, .btn-large:hover, .btn-small:hover {
+    background-color: #fff !important;
+}
+.btn:focus, .btn-large:focus, .btn-small:focus, .btn-floating:focus {
+    background-color: #fff !important;
+}
