--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,33 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    
+}
+#topic_name{
+    color: #1cb0f6;  
 }
 main {
     flex: 1 0 auto;
 }
 .home_scr {
-   
         border-radius: 10px !important;
         width: 70% !important;
+    color: #1cb0f6 !important;
    
+}
+.home_body {
+    background-color: #ddf4ff !important;
+}
+.start_btn {
+    color: #fff !important;
+    background-color: #1cb0f6 !important ;
+     border: 1px #1899d6 solid;
+   height: 60px !important;
+    border-radius: 10px !important;
+    width: 25% !important;
+    font-size: 20px;
+   font-weight: 600 !important;
+    
 }
 .quiz_scr{
     border-radius: 10px !important;
@@ -30,6 +48,7 @@ main {
     color: #000 !important;
     background-color: #fff ;
      border: 1px gray solid;
+     
 }
 
  /*.btn:hover, .btn-large:hover, .btn-small:hover {
@@ -46,4 +65,8 @@ main {
     height: 100%;
      
     width: 100%;
+}
+nav, .page-footer{
+     
+    color: #000 !important;
 }
